--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>org.apache.olingo</groupId>
     <artifactId>odata-parent</artifactId>
-    <version>4.0.0-beta-01-SNAPSHOT</version>
+    <version>4.0.0-beta-01-RC01</version>
     <relativePath>../..</relativePath>
   </parent>
 
