[OLINGO-545] Entity-update implementation in technical service
Change-Id: Id4ce3725a6788fd3230f5ff7bd96d2d2b620d730

Signed-off-by: Michael Bolz <michael.bolz@sap.com>

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>org.apache.olingo</groupId>
     <artifactId>odata-samples</artifactId>
-    <version>4.0.0-beta-02-RC01</version>
+    <version>4.0.0-beta-03-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
