--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+
+      <!-- Disable checkstyle for sample -->
+      <plugin>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
