--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
   <artifactId>odata-client-sample</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  
+
   <parent>
     <groupId>org.apache.olingo</groupId>
     <artifactId>odata-samples</artifactId>
-    <version>4.0.0</version>
+    <version>4.1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
